extends Node2D


func _on_crypt_button_button_up():
	get_tree().change_scene_to_file("res://level.tscn")


func _on_village_button_button_up():
	pass # Replace with function body.


func _on_city_button_button_up():
	pass # Replace with function body.


func _on_forest_button_button_up():
	pass # Replace with function body.


func _on_cathedral_button_button_up():
	pass # Replace with function body.


func _on_castle_button_button_up():
	pass # Replace with function body.
